# HAL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Inc/: delay.h
Src/: delay.cpp  main.cpp
cmake/: compileFlags.cmake  toolchain_arm.cmake
core/: CMakeLists.txt
core/ST/STM32F401RE/: cfg.cmake
core/ST/STM32F401RE/Source/: CMakeLists.txt
core/ST/STM32L476/Include/: mcuInit.h
core/ST/STM32L476/Source/: CMakeLists.txt
core/ST/STM32L476/halLayer/: CMakeLists.txt  gpio.cpp  gpio.h  gpioPort.cpp  gpioPort.h  mcuInit.cpp  port.cpp  port.h
core/ST/STM32L476/halLayer/gpio/: CMakeLists.txt  gpio.cpp  gpio.h  gpioAlternate.cpp  gpioAlternate.h  gpioInput.cpp  gpioInput.h  gpioOutput.cpp  gpioOutput.h  gpioPort.cpp  gpioPort.h
core/ST/STM32L476/halLayer/i2c/: CMakeLists.txt  i2c.cpp  i2c.h
core/ST/STM32L476/halLayer/interrupt/: CMakeLists.txt  interrupt.cpp  timeInterrupt.cpp  timeInterrupt.h
core/ST/STM32L476/halLayer/timer/: CMakeLists.txt  timer.cpp  timer.h
core/ST/STM32L476/halLayer/uart/: CMakeLists.txt  uart.cpp  uart.h
core/ST/STM32L476/halLayerImpl/gpio/: CMakeLists.txt  gpioInput.h  gpioPort.h
core/ST/STM32L476/halLayerImpl/i2c/: CMakeLists.txt  i2c.cpp  i2c.h
core/ST/STM32L476/halLayerImpl/interrupt/: CMakeLists.txt  interrupt.h  timeInterrupt.cpp
core/ST/STM32L476/halLayerImpl/timer/: CMakeLists.txt  timer.cpp
core/ST/STM32L476/halLayerImpl/uart/: CMakeLists.txt  uart.cpp
doc/: IGpio.puml  initSequence.drawio  mcu.puml
lib/: CMakeLists.txt  errors.h
lib/components/: CMakeLists.txt  nothing.cpp
lib/components/gpio/: CMakeLists.txt  IGpio.cpp  IGpio.h  IGpioAlternate.cpp  IGpioAlternate.h  IGpioInput.cpp  IGpioInput.h  IGpioOutput.cpp  IGpioOutput.h  IPort.cpp  IPort.h  gpio.cpp
lib/components/gpio/inc/: gpio.h
lib/components/i2c/: CMakeLists.txt  II2c.cpp  II2c.h
lib/components/interrupt/: CMakeLists.txt  IInterrupt.cpp  IInterrupt.h  ITimeInterrupt.cpp  ITimeInterrupt.h
lib/components/mcu/: CMakeLists.txt  IComponent.cpp  IComponent.h  IMcu.cpp  IMcu.h
lib/components/timer/: CMakeLists.txt  ITimer.cpp  ITimer.h
lib/components/uart/: CMakeLists.txt  IUart.cpp  IUart.h
lib/interface/: IComponent.h  IGpio.h
lib/modules/: CMakeLists.txt
lib/modules/sensors/: CMakeLists.txt  ILightSensor.cpp  ILightSensor.h  IPressureSensor.cpp  IPressureSensor.h
lib/utils/: CMakeLists.txt  circularBuffer.cpp  circularBuffer.h
modules/: CMakeLists.txt
modules/sensors/: BMP280.cpp  BMP280.h  CMakeLists.txt
